Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,10 +188,7 @@
     {
      "data": {
       "text/plain": [
-       "{'name': 'Friends',\n",
-       " 'genre': 'sitcom',\n",
-       " 'no_of_seasons': 10,\n",
-       " 'no_of_episodes': 236}"
+       "{'name': 'Friends', 'genre': 'sitcom', 'no_of_seasons': 10}"
       ]
      },
      "execution_count": 6,
